# YiYanDingZhen-LLM-Enhancement-plugin

./: .env.example  .gitattributes  .gitignore  2400080-一言鼎臻-【A02】文心一言插件设计与开发【百度】-产品使用手册(8).docx  2400080-一言鼎臻-【A02】文心一言插件设计与开发【百度】-项目详细方案(5).docx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  run.py  wsgi.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
artifacts/: README.md  manifest.json
docs/: api.md  architecture.md  configuration.md  legacy-audit.md  migration.md  product-baseline.md  validation.md
examples/: plugin_client.py
scripts/: build_index.py  convert_caj.py  merge_pdfs.py  migrate_legacy_index.py  summarize_paper.py
src/yiyan_dingzhen/: __init__.py  __main__.py  app.py  cli.py  config.py  documents.py  domain.py  downloader.py  llm.py  markdown.py  memory.py  prompts.py  query.py  retrieval.py  routing.py  service.py  textsplit.py  wsgi.py
src/yiyan_dingzhen/plugin/: ai-plugin.json  example.yaml  openapi.yaml
tests/: conftest.py
tests/contract/: test_app.py  test_artifact_manifest.py  test_plugin_files.py  test_wsgi.py
tests/integration/: test_service.py
tests/unit/: test_cli.py  test_documents.py  test_downloader.py  test_llm.py  test_markdown.py  test_memory.py  test_prompts.py  test_query.py  test_retrieval.py  test_routing.py  test_textsplit.py
