[build-system]
requires = ["setuptools>=83,<84", "wheel>=0.47,<0.48"]
build-backend = "setuptools.build_meta"

[project]
name = "yiyan-dingzhen"
version = "0.2.0"
description = "面向物理问题的文心一言增强插件与本地检索系统"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [
  { name = "YiYan DingZhen contributors" },
]
keywords = ["wenxin", "qianfan", "rag", "physics", "flask"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "Flask==3.1.3",
  "flask-cors==6.0.5",
  "python-dotenv==1.2.2",
  "requests==2.34.2",
  "langdetect==1.0.9",
  "jieba==0.42.1",
  "yake==0.7.3",
  "numpy==2.2.6",
  "annoy==1.17.3",
  "pypdf==6.14.2",
  "python-docx==1.2.0",
]

[project.optional-dependencies]
rag = [
  "sentence-transformers==5.6.1",
  "transformers==5.14.0",
  "torch==2.13.0",
]
tools = [
  "pandas==2.3.3",
  "tqdm==4.68.4",
  "PyMuPDF==1.28.0",
]
server = [
  "waitress==3.0.2",
]
dev = [
  "build==1.5.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pytest-socket==0.8.0",
  "PyYAML==6.0.3",
  "ruff==0.15.21",
  "types-requests==2.33.0.20260712",
]
security = [
  "bandit==1.9.4",
  "pip-audit==2.10.1",
]

[project.scripts]
yiyan-dingzhen = "yiyan_dingzhen.cli:main"

[project.urls]
Repository = "https://github.com/ZibangNie/YiYanDingZhen-LLM-Enhancement-plugin"
Issues = "https://github.com/ZibangNie/YiYanDingZhen-LLM-Enhancement-plugin/issues"
Changelog = "https://github.com/ZibangNie/YiYanDingZhen-LLM-Enhancement-plugin/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yiyan_dingzhen = [
  "plugin/*.json",
  "plugin/*.yaml",
  "py.typed",
  "resources/*.png",
  "resources/*.txt",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --disable-socket"
testpaths = ["tests"]
markers = [
  "integration: integration tests that combine multiple project components",
  "network: tests that require network access",
  "paid: tests that call a paid external model API",
]
filterwarnings = [
  "error",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"run.py" = ["E402"]
"wsgi.py" = ["E402"]
"scripts/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["yiyan_dingzhen"]
mypy_path = "src"
warn_unused_ignores = true
ignore_missing_imports = true
